# todo-rs

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  rustfmt.toml
.git_hooks/: pre-push
migrations/2019-07-16-043305_create_tasks/: up.sql
src/: lib.rs  models.rs  schema.rs
src/db/: mod.rs  queries.rs
