[package]
name = "todo_boilerplate"
version = "0.1.0"
authors = ["Matthew Westrik <m@ttwestrik.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
rocket = "0.4.2"
serde = "*"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]